--- a/README
+++ b/README
@@ -1,16 +1,1 @@
-Image Strip
-===========
-
-This WordPress plugin allows you to force the width or height of uploaded images to be the same, therefore allowing you to display a horizontal or vertical strip of images in your theme.
-
-Installation
-------------
-
-Simply copy the files to your WordPress plugins directory and activate in the admin
-
-Setup
------
-
-Just configure the options in the Media options panel. You can select which image size you want to fix the dimension of (medium or large) and which dimension you'd like to fix. Enter a value for the dimension in the text field above, save your options, and then start uploading or regenerate your thumbnails.
-
-If you need to regenerate thumbnails then I recommend the [Regenerate Thumbnails](http://www.viper007bond.com/wordpress-plugins/regenerate-thumbnails/) plugin 
+See README.markdown
